Fix: testing email visibility

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -781,6 +781,7 @@ form {
     grid-column-end: 3;
     margin-left:auto;
     margin-right:auto;
+    background-color:green;
 }
 form h2 {
     text-align: center;
